# benchmarking

./: project_structure.txt
llm_benchmark/: .env  Benchmarkign parameters.txt  Evaluation.py  azure_similarity_eval.py  benchmark.py  criteria_evaluator_modular.py  criteria_evaluator_tod.py  criteria_evaluator_toe_tod_1.py  criteria_evaluator_v2.py  dependencies.txt  dictionary_iterator.txt  evaluator_new.py  excel_export.py  final_parameter.json  model_evaluator.py  model_evaluator_new.py  normalize_text.py  prompt_4_one_shot.py  prompt_V3.py  prompt_samle.txt  prompt_v2.py  prompt_v2_1.py  prompt_v3_1.py  prompt_v3_toe_change.txt  prompts.py  pyproject.toml  tod_tod_pass_fail_calculation.py  various.py
llm_benchmark/src/api/: dependencies.py  main.py  models.py
llm_benchmark/src/api/routes/: chatbot.py  criteria.py  dbtest.py  evidence.py  questions.py
llm_benchmark/src/config/: database.json  models..json  parameter_sets.json  parameters.json  parameters_explained.md
llm_benchmark/src/core/: database.py  metrics.py  model_client.py  utils.py
llm_benchmark/src/data/evidence/: readme.txt
llm_benchmark/src/data/frameworks/: readme.txt
llm_benchmark/src/data/knowledge_base/: readme.txt
llm_benchmark/src/scripts/: deploy_azure.py  generate_report.py  run_benchmark.py  setup_databases.py
llm_benchmark/src/usecases/criteria_generation/: benchmark.py  evaluator.py  prompts.py
llm_benchmark/src/usecases/evidence_analyzer/: benchmark.py  doc_parser.py  evaluator.py  prompts.py
llm_benchmark/src/usecases/policy_chatbot/: benchmark.py  evaluator.py  prompts.py  (+1 more)
(+3 files in other folders)
