[project]
name = "llm-benchmarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-evaluation>=1.13.0",
    "azure-identity>=1.25.1",
    "docling>=2.60.0",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "uvicorn>=0.38.0",
]
